# Quantitative-Text-Analysis

./: .gitignore  README.md  cache.py  cli.py  config.py  constraints.txt  data_types.py  docs.md  grouping.py  perdoc.py  pydoc-markdown.yaml  pyproject.toml  requirements.txt
scripts/: debug_perdoc_pipeline.py
src/quant_text_analysis/: __main__.py  cache.py  cli.py  cluster_cli.py  config.py  data_types.py  grouping.py  io_loader.py  nlp_backend.py  perdoc.py  phrase_discovery.py  ppmi.py  ppmi_cli.py  settings.py
src/quant_text_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/quant_text_analysis/cluster/: algorithms.py  app.py  cluster_cli.py  metrics.py
src/quant_text_analysis/commands/: cluster_cli.py  cross_table.py  freq_cli.py  mnlr_cli.py  phrases_cli.py  plot_cluster_graph.py  silhouette_graph_cli.py
src/quant_text_analysis/features/: embeddings.py  frequency.py  ppmi.py  vocab_selection.py
src/quant_text_analysis/io/: loader.py  writers.py
src/quant_text_analysis/mnlr/: __init__.py  coding.py  model.py  plotting.py  statsmodels.py  statsmodels_fork.py  tables.py
src/quant_text_analysis/preprocess/: cache.py  nlp_backend.py  normalize.py  perdoc.py
