[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-text-analysis"
version = "0.1.0"
description = "Quantitative text analysis utilities"
requires-python = "==3.12.10"
dependencies = [
    "pandas~=2.3", 
    "spacy~=3.7", 
    "gensim~=4.3", 
    "breame~=0.1.2",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85",
    "scikit-learn~=1.5"
]

[project.scripts]
quant-text-analysis = "quant_text_analysis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]  # ← src レイアウト
