[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-text-analysis"
version = "0.1.0"
description = "Quantitative text analysis utilities"
requires-python = "==3.12.10"
dependencies = [
    "pandas~=2.3", 
    "spacy~=3.7", 
    "gensim~=4.3", 
    "breame~=0.1.2",
    "en-core-web-sm~=3.7",
    "scikit-learn~=1.5"
]

[project.scripts]
quant-text-analysis = "quant_text_analysis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]  # ← src レイアウト
